# rmskin-action

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.rst  RMSKIN.ini  action-requirements.txt  action.yml  cspell.config.yml  enter_rmskin_builder.sh  nurfile  pyproject.toml  release.py  requirements.txt  rmskin_builder.py  rmskin_builder.pyi  setup.py
.config/: cliff.toml  committed.toml  nextest.toml
.github/: dependabot.yml  zizmor.yml
.github/workflows/: bump-n-release.nu  bump-n-release.yml  check-ci.yml  main.yml  pre-commit.yml  python.yml  rust.yml  self-test.yml
src/: cli.rs  discover.rs  error.rs  lib.rs  logger.rs  main.rs
src/file_utils/: bitness.rs  header_img.rs  mod.rs  parse_ini.rs  zip.rs
tests/: RMSKIN.ini  test_build.py
tests/demo_project/: RMSKIN.ini
