[build-system]
requires = ["setuptools>=77", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rmskin-builder"
requires-python = ">=3.9"
description = "A script that will attempt to assemble a validating Rainmeter skin package for quick and easy distribution on Github."
readme = "README.rst"
keywords = ["rainmeter", "rainmeter-skin", "packaging"]
license = "MIT"
authors = [
    { name = "Brendan Doherty", email = "2bndy5@gmail.com" },
]
classifiers = [
    # https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: System :: Archiving :: Packaging",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "pefile>=2024.8.26",
    "pillow>=11.3.0",
]

[project.scripts]
rmskin-builder = "rmskin_builder:main"

[project.urls]
source =  "https://github.com/2bndy5/rmskin-action"
tracker = "https://github.com/2bndy5/rmskin-action/issues"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[tool.setuptools]
py-modules = ["rmskin_builder"]

[tool.setuptools_scm]
# It would be nice to include the commit hash in the version, but that
# can't be done in a PEP 440-compatible way.
version_scheme= "no-guess-dev"
# Test PyPI does not support local versions.
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.mypy]
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.run]
source = ["rmskin_builder"]
relative_files = true

[dependency-groups]
dev = [
    "coverage[toml]>=7.10.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
